--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "admin-site-a",
+  "name": "admin-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
     "lint": "biome check",
     "format": "biome format --write"
   },
